--- a/site.html
+++ b/site.html
@@ -51,13 +51,13 @@
 </head>
 <body>
 
-    <div class="text">Ma ierti??</div>
+    <div class="text">Ma ierti?</div>
 
     <div class="button-container">
 	   <button class="green" onclick="alert('YAY!')">Yes</button>
 	   <button class="red" onclick="alert('Awe')">No</button>
     </div>
 
-    
+
 </body>
 </html> 
